# virus-model-simulation

./: .gitignore  README.md  pyproject.toml
analysis/: README.md
analysis/common/: paths.py  plots.py
analysis/extension/: __init__.py  cli.py  plots.py  summary.py
analysis/replication/: __init__.py  cli.py  plots.py  summary.py
configs/baseline/: baseline.json  full_infection.json  high_spread_low_recovery.json  low_spread_high_recovery.json
docs/: Domain Model.drawio  architecture.md  domain_model.drawio  experimental_design.md  fsp_person_lifecycle.lts  fsp_person_lifecycle_extension.lts  state_machine_baseline.drawio  state_machine_extension.drawio
output/: README.md
output/netlogo_prototype/: Virus High_spread_low_recovery_100_runs-spreadsheet.csv  Virus Low_spread_high_recovery_100_runs-spreadsheet.csv
output/python_extension/: 00_run_metrics.csv  01_run_metrics.csv  02_run_metrics.csv  05_run_metrics.csv  10_run_metrics.csv  25_run_metrics.csv  Virus Extension 00_100_runs-spreadsheet.csv  Virus Extension 01_100_runs-spreadsheet.csv  Virus Extension 02_100_runs-spreadsheet.csv  Virus Extension 05_100_runs-spreadsheet.csv  Virus Extension 10_100_runs-spreadsheet.csv  (+1 more)
plots/: plot_report_figures.py
report_plots/: plot_report_figures.py
results/: README.md
scripts/: plot_figures.py  run_baseline.py  run_extension.py
src/: README.md
src/analysis/: cli.py  (+4 more)
tests/: test_export.py  test_infection.py  test_person_state.py  test_recovery_death.py  test_reproduction.py  test_simulation_step.py  test_spreadsheet.py  test_summary.py  test_world.py
(+136 files in other folders)
