[project]
name = "virus-model"
version = "0.1.0"
description = "Python replication of the NetLogo Virus model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
analysis = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virus_model", "src/run", "src/analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
