[project]
name = "virus-model"
version = "0.1.0"
description = "Python replication of the NetLogo Virus model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
analysis = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/model",
    "src/run",
    "src/scripts",
    "src/scripts/common",
    "src/scripts/prototype",
    "src/scripts/extension",
    "analysis",
    "analysis/common",
    "analysis/replication",
    "analysis/extension",
]
